--- a/RainOrShine/CurrentWeatherView.xib
+++ b/RainOrShine/CurrentWeatherView.xib
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WeatherView" customModule="RainOrShine" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CurrentWeatherView" customModule="RainOrShine" customModuleProvider="target">
             <connections>
                 <outlet property="summaryLabel" destination="qsK-Fj-OsB" id="iaA-2r-mOP"/>
                 <outlet property="temperatureLabel" destination="c60-pf-SdH" id="WrP-c7-M7n"/>
